feat: improve repository